# Desktop-Pet

./: .gitignore  PROJECT_PLAN.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: windows-build.yml
docs/: ENVIRONMENT.md  RELEASE.md  WINDOWS_BUILD.md
scripts/: run-with-project-env.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: feeding.rs  lib.rs  main.rs  sensors.rs  window_position.rs
src/feeding/: FeedingWindow.tsx  petFeeding.ts
src/pet/: PetWindow.tsx  petMood.ts  petSensorBridge.ts  petSimulation.ts
