[package]
name = "desktop-pet"
version = "0.1.0"
description = "一个低存在感但有灵性的 Windows 桌面小怪兽"
authors = ["jasmine"]
edition = "2021"

[lib]
name = "desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.1", features = [] }

[dependencies]
tauri = { version = "=2.11.1", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "=2.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = { version = "=0.39.1", default-features = false, features = ["system"] }
